Bug 333395 - krunner does case insensitive search, but can't open case sensitive results (file names)
Summary: krunner does case insensitive search, but can't open case sensitive results (...
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: locations (other bugs)
Version First Reported In: 5.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-14 00:36 UTC by Renan Inácio
Modified: 2014-10-21 15:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Renan Inácio 2014-04-14 00:36:18 UTC
Assume you have a folder called /tmp/AAA. If you type "/tmp/aaa" in krunner, it will display the option "Open /tmp/aaa" but will fail because it does not exist.

What I would expect is that even if i typed lowercase, the option would have the correct case. If there are other paths, like /tmp/AaA, /tmp/aAA and even /tmp/aaa, they should also be displayed for the user to choose.

Reproducible: Always

Steps to Reproduce:
0. Create folder /tmp/AAA
1. Type /tmp/aaa in krunner and select "Open /tmp/aaa"
2. Type /tmp/AAA in krunner and select "Open /tmp/AAA"
3. Type /tmp/AA in krunner
Actual Results:  
1. It fails
2. It succeeds
3. The option "Open /tmp/AA" isn't avaiable (because it doesn't exist).

Expected Results:  
1. Should display "Open /tmp/AAA", so it can succeed.
2. Actual result is expected
3. Actual result is expected

Ubuntu 13.10
KDE 4.12.3 (kubuntu-ppa backports)
Comment 1 Vishesh Handa 2014-07-23 15:15:05 UTC
Confirmed. This also affects version 5.0, which means I now care! :)
Comment 2 Vishesh Handa 2014-10-21 15:44:57 UTC
Git commit 1ae78f08474878e60d086ea60e933d62228eac2f by Vishesh Handa.
Committed on 17/10/2014 at 15:45.
Pushed by vhanda into branch 'master'.

LocationRunner: Convert case insensitive path to a proper one
FIXED-IN: 5.2

M  +40   -0    runners/locations/locationrunner.cpp

http://commits.kde.org/plasma-workspace/1ae78f08474878e60d086ea60e933d62228eac2f