LocationRunner: Convert case insensitive path to a proper one

BUG: 333395
FIXED-IN: 5.2